# device_soc_chipsea

./: BUILD.gn  EULA  End User License Agreement.md  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  LICENSE  OAT.xml  README.en.md  README.md  README_zh.md
cst85/: BUILD.gn  Kconfig.liteos_m.defconfig.cst85f01  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  Makefile  build.sh  target_config.h
cst85/liteos_m/: BUILD.gn
cst85/liteos_m/components/: BUILD.gn
cst85/liteos_m/components/drivers/: BUILD.gn
cst85/liteos_m/components/drivers/led_driver/: BUILD.gn
cst85/liteos_m/components/drivers/led_driver/include/: led_service.h
cst85/liteos_m/components/drivers/led_driver/src/: led_driver.c
cst85/liteos_m/components/drivers/littlefs/: BUILD.gn  hal_vfs.c  hal_vfs.h
cst85/liteos_m/components/hdf_config/: BUILD.gn  device_info.hcs  hdf.hcs
cst85/liteos_m/sdk/: BUILD.gn
cst85/liteos_m/sdk/bsp/arch/: BUILD.gn  arch.h  cs_proguard.h  plf.h
cst85/liteos_m/sdk/bsp/arch/boot/: fault_handler.c  system.h
cst85/liteos_m/sdk/bsp/arch/cmsis/: cmsis.h
cst85/liteos_m/sdk/bsp/arch/compiler/: compiler.h
cst85/liteos_m/sdk/bsp/arch/ll/: ll.c  ll.h
cst85/liteos_m/sdk/bsp/arch/main/: arch_main.c
cst85/liteos_m/sdk/bsp/driver/: chip.h
cst85/liteos_m/sdk/bsp/driver/asdma_mst/: BUILD.gn  asdma_mst_api.h  asdma_mst_api2.h
cst85/liteos_m/sdk/bsp/driver/bt/: BUILD.gn  bt_common_config.c  bt_common_config.h  bt_cs8800_driver.c  bt_cs8800_driver.h  bt_cs8800_drv_config.h  bt_cs8800_drvif.h  bt_hci.h  bt_patch_table.c  bt_patch_table.h  bt_user_driver.h
cst85/liteos_m/sdk/bsp/driver/ce/: BUILD.gn  ce_api.h  ce_common.h
cst85/liteos_m/sdk/bsp/driver/common/: BUILD.gn  dma_common.h
cst85/liteos_m/sdk/bsp/driver/cs1000aud_regs/: BUILD.gn  cs1000Aud_analog_reg.h  cs1000Aud_gpio.h  cs1000Aud_iomux.h  cs1000Aud_led_pwm.h  cs1000Aud_msadc.h  cs1000Aud_rtc_core.h  cs1000Aud_sys_ctrl.h
cst85/liteos_m/sdk/bsp/driver/cs1000lite_regs/: BUILD.gn  cs1000Lite_analog_reg.h  cs1000Lite_gpio.h  cs1000Lite_iomux.h  cs1000Lite_led_pwm.h  cs1000Lite_msadc.h  cs1000Lite_rtc_core.h  cs1000Lite_spi.h  cs1000Lite_sys_ctrl.h
cst85/liteos_m/sdk/bsp/driver/dma/: BUILD.gn  dma_api.h  dma_api_bt.h  dma_generic.h  reg_dma.h
cst85/liteos_m/sdk/bsp/driver/flash/: BUILD.gn  bootloader.h  flash_api.c  flash_api.h
cst85/liteos_m/sdk/bsp/driver/gpadc/: BUILD.gn  gpadc_api.c  gpadc_api.h
cst85/liteos_m/sdk/bsp/driver/gpio/: BUILD.gn  gpio_api.c  gpio_api.h  reg_gpio.h
cst85/liteos_m/sdk/bsp/driver/iomux/: BUILD.gn  pinname.h  reg_iomux.h
cst85/liteos_m/sdk/bsp/driver/ipc/: BUILD.gn  reg_g1_ipc_app.h  reg_g1_ipc_emb.h  reg_ipc_app.h  reg_ipc_comreg.h  reg_ipc_mutex.h
cst85/liteos_m/sdk/bsp/driver/pmic/: BUILD.gn  pmic_api.h  pwrkey_api.c  pwrkey_api.h
cst85/liteos_m/sdk/bsp/driver/psim/: BUILD.gn  psim_api.h
cst85/liteos_m/sdk/bsp/driver/pub/: BUILD.gn  driver_pub.h
cst85/liteos_m/sdk/bsp/driver/reg/: BUILD.gn  reg_access_wrapper.h
cst85/liteos_m/sdk/bsp/driver/rf/: BUILD.gn  reg_bt_rf.h  reg_riu.h  reg_wcnaon.h  reg_wlan_rf.h  rf_config.h
cst85/liteos_m/sdk/bsp/driver/sleep/: BUILD.gn  sleep_api.h
cst85/liteos_m/sdk/bsp/driver/stdio_uart/: BUILD.gn  reg_stdio_uart.h  stdio_uart.c  uart.h
cst85/liteos_m/sdk/bsp/driver/sysctrl/: BUILD.gn  reg_sysctrl.h  sysctrl_api.h
cst85/liteos_m/sdk/bsp/driver/ticker/: BUILD.gn  lp_ticker.c  reg_timer.h  us_ticker.c
cst85/liteos_m/sdk/bsp/driver/time/: BUILD.gn  time_api.c  time_api.h
cst85/liteos_m/sdk/bsp/driver/trng/: BUILD.gn  reg_trng.h  trng_api.c  trng_api.h
cst85/liteos_m/sdk/bsp/sample/: BUILD.gn  task_sample.c  task_sample.h
cst85/liteos_m/sdk/bsp/wrapper/: BUILD.gn  lite_sys.c  syscalls.c
cst85/liteos_m/sdk/modules/aon/: BUILD.gn
cst85/liteos_m/sdk/modules/aon/api/: aon_sram.h
cst85/liteos_m/sdk/modules/aon/src/: aon_sram.c
cst85/liteos_m/sdk/modules/apps/: BUILD.gn
cst85/liteos_m/sdk/modules/apps/api/: app_a2dp.h  app_a2dp_source.h  app_avrcp.h  app_ble_only.h  app_bt.h  app_bt_queue.h  app_hfg.h  app_hfp.h  app_hsp.h  app_ota_box.h  app_spp.h  app_test.h  app_tws.h  cs_target_config.h
cst85/liteos_m/sdk/modules/apps/src/: app_a2dp.c  app_a2dp_source.c  app_avrcp.c  app_ble_only.c  app_bt.c  app_bt_queue.c  app_console.c  app_hfg.c  app_hfp.c  app_hid.c  app_hsp.c  app_ota_box.c  app_spp.c  app_test.c  app_tws.c  ble_smartconfig_wifi_example.c
cst85/liteos_m/sdk/modules/ble_task/: BUILD.gn
cst85/liteos_m/sdk/modules/ble_task/api/: ble_task.h  ble_task_msg.h
cst85/liteos_m/sdk/modules/ble_task/src/: ble_task.c  ble_task_msg.c
cst85/liteos_m/sdk/modules/bt_task/: BUILD.gn
cst85/liteos_m/sdk/modules/bt_task/api/: bt_task.h  bt_task_msg.h
cst85/liteos_m/sdk/modules/bt_task/src/: bt_task.c  bt_task_msg.c
cst85/liteos_m/sdk/modules/btdm/: BUILD.gn
cst85/liteos_m/sdk/modules/common/: BUILD.gn
cst85/liteos_m/sdk/modules/common/api/: co_int.h  co_main.h  co_math.h  co_message.h  co_utils.h  ring_buffer.h  wb_co_bool.h  wb_co_int.h  wb_co_list.h  wb_co_math.h  wb_co_utils.h
cst85/liteos_m/sdk/modules/common/src/: co_main.c  ring_buffer.c  wb_co_main.c  wb_co_math.c
cst85/liteos_m/sdk/modules/console/: BUILD.gn
cst85/liteos_m/sdk/modules/console/api/: command.h  console.h  console_task.h  lnx_list.h
cst85/liteos_m/sdk/modules/console/src/: command.c  console.c  console_task.c
cst85/liteos_m/sdk/modules/dbg/: BUILD.gn  cs_dbg.c  cs_dbg_assert.c  cs_dbg_print.c  dbg.h  dbg_assert.h  dbg_print.c
cst85/liteos_m/sdk/modules/lwip/: BUILD.gn
cst85/liteos_m/sdk/modules/lwip-2.1/: BUILD.gn
cst85/liteos_m/sdk/modules/lwip-2.1/dhcps/: dhcps.c  dhcps.h
cst85/liteos_m/sdk/modules/lwip/dhcps/: dhcps.c  dhcps.h
cst85/liteos_m/sdk/modules/lwip/net_al/: lwiphooks.h  lwipopts.h  net_al.c  net_iperf_al.c  net_tg_al.c
cst85/liteos_m/sdk/modules/rtos/: BUILD.gn
cst85/liteos_m/sdk/modules/rtos/api/: al_rtos.h  rtos.h  rtos_al.h  rtos_def.h  rtos_ohos_al.h  (+2 more)
cst85/liteos_m/sdk/modules/wb_coex/: BUILD.gn
cst85/liteos_m/sdk/modules/wifi/: BUILD.gn
(+200 files in other folders)
