# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
module_name = "sdk_bsp_arch"
#module_name = get_path_info(rebase_path("."), "name")
print("SOC:CHIPSEA:CST85/liteos_m/sdk/bsp - $module_name")

kernel_module(module_name) {
  sources = [
    "boot/armgcc_4_8/boot_startup.S",
    "boot/armgcc_4_8/exception.S",
    "boot/fault_handler.c",

    "cmsis/cmsis_nvic.c",

    "ll/ll.c",

    "main/arch_main.c",
  ]

  include_dirs = [
    "boot",
    "boot/armgcc_4_8",
  ]

  deps = [
    "//base/startup/bootstrap_lite/services/source:bootstrap",
  ]
}

config("public") {
  include_dirs = [
    ".",
    "boot",
    "compiler",
    "cmsis",
    "ll",
  ]
}
